--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   display: grid;
   gap: 16px;
-  max-width: 1280px;
+  width:100%;
   grid-template-columns: repeat(auto-fit, 284px);
   padding: 0 48px;
 }
